# reason-guard-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATOMIC_ROUTER_PLAN.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_VARIABLES.md  Makefile  README.md  SECURITY.md  benchmark_results.json  codecov.yml  config.yaml  docker-compose.yml  gsm8k_results.json  main.py  profile_kg.py  pyproject.toml  reasoning_results.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
.opencode/skills/pre-commit-python-stack/: SKILL.md
docs/: IMPLEMENTATION_SUMMARY.md  fastmcp_implementation.md  fastmcp_quick_ref.md  production_checklist.md
examples/: __init__.py  basic_usage.py  benchmark.py  benchmark_gsm8k.py  benchmark_problems.yaml  benchmark_router.py  constraint_solving.py  feedback_loop.py  interactive_demo.py  llm_client.py  multi_hop_qa.py  reasoning_benchmark.py  reasoning_comparison.py
scripts/: release.sh
secrets/: .gitkeep
src/: __init__.py  config.py  metrics_server.py  server.py
src/models/: __init__.py  context_encoder.py  knowledge_graph.py  llm_client.py  model_config.py  model_manager.py  vector_store.py
src/tools/: __init__.py  atomic_router.py  compress.py  domain_handlers.py  long_chain.py  mot_reasoning.py  reasoning_types.py  router_types.py  routing_rules.py  thought_graph.py  unified_reasoner.py  verify.py
src/utils/: __init__.py  complexity.py  confidence.py  errors.py  logging.py  observability.py  retry.py  schema.py  scoring.py  session.py  session_signing.py  weight_store.py
tests/: __init__.py  conftest.py  test_atomic_router.py  test_complexity.py  test_compress.py  test_confidence.py  test_context_encoder.py  test_domain_handlers.py  test_e2e_mcp.py  test_integration.py  test_knowledge_graph.py  test_llm_client.py  test_logging.py  test_metrics_server.py  test_model_config.py  test_model_manager.py  test_observability.py  test_performance.py  test_pipeline_integration.py  test_retry.py  test_routing_rules.py  test_scoring.py  test_server.py  test_session.py  test_smoke.py  test_think_properties.py  test_thought_graph.py  test_tools.py  test_weight_store.py
