[project]
name = "matrixmind-mcp"
version = "0.1.0"
description = "Enhanced Chain-of-Thought MCP Server with FastMCP 2.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MatrixMind Team" }]
keywords = ["mcp", "chain-of-thought", "reasoning", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    # faiss-gpu wheels are limited; install manually if needed:
    # pip install faiss-gpu (requires CUDA)
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
matrixmind-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/coderdayton/matrixmind-mcp"
Documentation = "https://github.com/coderdayton/matrixmind-mcp#readme"
Repository = "https://github.com/coderdayton/matrixmind-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests requiring OPENAI_API_KEY (run with '-m integration')",
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "benchmark: marks tests as benchmarks for performance measurement",
    "slow: marks tests as slow running",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D104", "D107", "D203", "D213",
    "D401",  # First line imperative mood - too strict for decorators
    "D417",  # Missing ctx arg in docstring - FastMCP injects it
    "N812",  # Lowercase import as non-lowercase - torch.nn.functional as F is standard
    "N818",  # Exception suffix - MatrixMindException is acceptable
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert in non-test code for contracts

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest-cov>=7.0.0",
]
