[project]
name = "matrixmind-mcp"
version = "0.1.0"
description = "Enhanced Chain-of-Thought MCP Server with FastMCP 2.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MatrixMind Team" }]
keywords = ["mcp", "chain-of-thought", "reasoning", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0.0",
    "simplevecdb>=1.3.0",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    # faiss-gpu wheels are limited; install manually if needed:
    # pip install faiss-gpu (requires CUDA)
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
matrixmind-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/coderdayton/matrixmind-mcp"
Documentation = "https://github.com/coderdayton/matrixmind-mcp#readme"
Repository = "https://github.com/coderdayton/matrixmind-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests requiring OPENAI_API_KEY (run with '-m integration')",
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "benchmark: marks tests as benchmarks for performance measurement",
    "slow: marks tests as slow running",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D104", "D105", "D107", "D203", "D213",
    "D401",  # First line imperative mood - too strict for decorators
    "D417",  # Missing ctx arg in docstring - FastMCP injects it
    "N812",  # Lowercase import as non-lowercase - torch.nn.functional as F is standard
    "N818",  # Exception suffix - MatrixMindException is acceptable
    "D101",  # Missing docstring in public class - allow in examples
    "D102",  # Missing docstring in public method - allow in examples
    "E501",  # Line too long - handled by formatter, allow in multiline strings
    "N806",  # Variable in function should be lowercase - allow W for width
    "E741",  # Ambiguous variable name - allow l in comprehensions
    "B007",  # Loop control variable not used - allow for unpacking
    "SIM110",  # Use any() - sometimes explicit loop is clearer
    "SIM102",  # Use single if - nested if sometimes clearer
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["D", "E501", "N806", "F841", "C401"]
"tests/*" = ["D"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert in non-test code for contracts

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest-cov>=7.0.0",
]
