[project]
name = "reason-guard-mcp"
version = "0.1.0"
description = "Dual-paradigm reasoning guard for LLMs - guidance + enforcement modes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reason Guard Team" }]
keywords = ["mcp", "chain-of-thought", "reasoning", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.14.1",
    "simplevecdb>=2.0.0",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",  # CVE-2024-11392/3/4 + CVE-2025-6921 fixed
    "cryptography>=46.0.3",  # CVE-2024-26130 fixed
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "tenacity>=9.1.2",
    "numpy>=2.4.0",
    "pyyaml>=6.0.3",
    "orjson>=3.9.15",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[project.optional-dependencies]
gpu = [
    # faiss-gpu wheels are limited; install manually if needed:
    # pip install faiss-gpu (requires CUDA)
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-aiofiles>=25.1.0.20251011",
    "ruff>=0.14.10",
    "bandit>=1.7.10",
    "pre-commit>=4.5.1",
    "httpx>=0.28.1",
    "hypothesis>=6.148.8",
]

[project.scripts]
reason-guard = "src.server:main"
reason-guard-metrics = "src.metrics_server:main"

[project.urls]
Homepage = "https://github.com/coderdayton/reason-guard-mcp"
Documentation = "https://github.com/coderdayton/reason-guard-mcp#readme"
Repository = "https://github.com/coderdayton/reason-guard-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests requiring OPENAI_API_KEY (run with '-m integration')",
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "benchmark: marks tests as benchmarks for performance measurement",
    "slow: marks tests as slow running",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D104", "D105", "D107", "D203", "D213",
    "D401",  # First line imperative mood - too strict for decorators
    "D417",  # Missing ctx arg in docstring - FastMCP injects it
    "N812",  # Lowercase import as non-lowercase - torch.nn.functional as F is standard
    "N818",  # Exception suffix - ReasonGuardException is acceptable
    "D101",  # Missing docstring in public class - allow in examples
    "D102",  # Missing docstring in public method - allow in examples
    "E501",  # Line too long - handled by formatter, allow in multiline strings
    "N806",  # Variable in function should be lowercase - allow W for width
    "E741",  # Ambiguous variable name - allow l in comprehensions
    "B007",  # Loop control variable not used - allow for unpacking
    "SIM110",  # Use any() - sometimes explicit loop is clearer
    "SIM102",  # Use single if - nested if sometimes clearer
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["D", "E501", "N806", "F841", "C401"]
"tests/*" = ["D"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B608"]  # Allow assert for contracts; B608 has false positives on f-strings

[dependency-groups]
dev = [
    "datasets>=4.4.2",
    "hypothesis>=6.148.8",
    "mypy>=1.19.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "types-aiofiles>=25.1.0.20251011",
]
